--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,53 @@
 body {
-  margin: 20px;
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.event {
+  width: 400px;
+  border: black solid 2px;
+  margin: 10px;
+  padding: 5px;
+}
+.app {
+  padding-top: 60px;
+}
+.navbar {
+  position: absolute;
+  width: 100%;
+  z-index: 3;
+}
+.navbar-container {
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px;
+  align-items: center;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 10px;
+  transition: all 0.3s ease-in-out;
+}
+nav ul li:hover {
+  color: black;
+  background-color: white;
+}
+
+.login-form {
+  float: right;
+  margin: 5px 10px 10px 10px;
 }
