--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,45 @@ ul {
 }
 
 .event {
-  width: 400px;
+  min-width: 400px;
   border: black solid 2px;
   margin: 10px;
   padding: 5px;
 }
-.app {
+.wrapper {
   padding-top: 60px;
+  display: flex;
+  flex-flow: row wrap;
+}
+/* small screen */
+
+.wrapper > * {
+  flex: 1 100%;
+}
+/* medium screen */
+@media all and (min-width: 600px) {
+  .aside {
+    flex: 1 0 0;
+  }
+}
+/* larger screen */
+@media all and (min-width: 800px) {
+  .main {
+    flex: 3 0px;
+  }
+
+  .aside-1 {
+    order: 1;
+  }
+  .main {
+    order: 2;
+  }
+  .aside-2 {
+    order: 3;
+  }
+  .footer {
+    order: 4;
+  }
 }
 .navbar {
   position: absolute;
@@ -50,4 +82,10 @@ nav ul li:hover {
 .login-form {
   float: right;
   margin: 5px 10px 10px 10px;
+}
+
+input {
+  border: black 2px solid;
+  border-radius: 3px;
+  margin: 2px;
 }
