--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ p {
 }
 a {
   color: inherit;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.event-info-top a:hover {
+  color: grey;
 }
 ul {
   list-style: none;
@@ -158,6 +163,15 @@ ul {
   justify-content: space-between;
   padding: 0 15px;
   align-items: center;
+}
+.navbar-error {
+  background-color: red;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px;
+  align-items: center;
+  padding: 10px;
 }
 
 .nav-events-wrapper {
