--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,10 @@ input {
   margin: 2px;
   display: block;
 }
-.radio-buttons > * {
-  display: inline-block;
+.radio-buttons {
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row;
   margin: 0 5px;
 }
 p {
@@ -18,6 +20,9 @@ a {
   color: inherit;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
+}
+textarea {
+  resize: none;
 }
 .event-info-top a:hover {
   color: grey;
@@ -130,6 +135,14 @@ ul {
 .edit-event-container img {
   margin-left: 10px;
 }
+.event-form {
+  display: flex;
+  flex-flow: column;
+}
+.event-form > * {
+  margin: 0.4rem;
+  height: 40px;
+}
 .profile {
   border: black solid 2px;
   border-radius: 3px;
@@ -156,15 +169,31 @@ ul {
   z-index: 3;
 }
 
-.navbar-container {
-  background-color: black;
+.navbar-container,
+.navbar-error,
+.navbar-success {
   color: white;
   display: flex;
-  justify-content: space-between;
   padding: 0 15px;
   align-items: center;
 }
+.navbar-container {
+  background-color: black;
+  justify-content: space-between;
+}
 .navbar-error {
+  background-color: red;
+  padding: 10px;
+  font-weight: bolder;
+  justify-content: center;
+}
+.navbar-success {
+  background-color: green;
+  padding: 10px;
+  font-weight: bolder;
+  justify-content: center;
+}
+/* .navbar-error {
   background-color: red;
   color: white;
   display: flex;
@@ -172,7 +201,7 @@ ul {
   padding: 0 15px;
   align-items: center;
   padding: 10px;
-}
+} */
 
 .nav-events-wrapper {
   display: flex;
