--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ ul {
   border: black solid 2px;
   background-color: rgb(255, 255, 255);
   box-sizing: border-box;
+  cursor: pointer;
   text-decoration: none;
   font-weight: 300;
   text-align: center;
@@ -94,6 +95,29 @@ ul {
 .full-button {
   background-color: rgb(204, 204, 204);
   color: black;
+}
+.filter-checkboxes {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 10px;
+}
+
+input[type='checkbox'] {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: whitesmoke;
+  cursor: pointer;
+  appearance: none;
+  border: black 2px solid;
+  margin: 2px;
+}
+input[type='checkbox']:checked {
+  box-shadow: inset 0 0 0 10px black;
+}
+.filter-button:hover {
+  background-color: black;
+  color: whitesmoke;
 }
 
 .register-button {
