--- a/src/App.css
+++ b/src/App.css
@@ -99,10 +99,60 @@ ul {
 .filter-checkboxes {
   display: flex;
   justify-content: space-between;
-  margin: 0 10px;
+  margin: 10px 10px;
+  border: black 2px solid;
+  padding: 5px;
+  box-sizing: border-box;
+  width: 95%;
+}
+.filter-drinks {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  border: black 2px solid;
+  padding: 5px;
+  width: 95%;
+  /* box-sizing is very helpful */
+  box-sizing: border-box;
+  cursor: pointer;
+  margin: 10px;
+  font-size: 25px;
+}
+.filter-drinks > label {
+  margin: 5px;
+}
+.comment-form {
+  display: flex;
+}
+.comment-form > input {
+  width: 100%;
+  margin: 4px;
+}
+.comment {
+  border-radius: 2px;
+  display: flex;
+  margin: 4px;
+  align-items: center;
+}
+.comment:nth-child(odd) {
+  background-color: lightgray;
+}
+.comment p {
+  flex: 3 0;
+}
+.comment button {
+  margin: 5px;
 }
 
-input[type='checkbox'] {
+.comment-pic {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 3px 5px 3px 3px;
+  object-fit: cover;
+}
+input[type='checkbox'],
+input[type='radio'] {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
@@ -112,7 +162,11 @@ input[type='checkbox'] {
   border: black 2px solid;
   margin: 2px;
 }
-input[type='checkbox']:checked {
+input[type='checkbox'] {
+  display: inline-block;
+}
+input[type='checkbox']:checked,
+input[type='radio']:checked {
   box-shadow: inset 0 0 0 10px black;
 }
 .filter-button:hover {
@@ -213,9 +267,6 @@ input[type='checkbox']:checked {
   align-items: center;
 }
 .profile-pic {
-  border: black solid 2px;
-  border-radius: 3px;
-
   width: 150px;
   height: auto;
   margin-bottom: 20px;
@@ -230,13 +281,16 @@ input[type='checkbox']:checked {
 
 .navbar-container,
 .navbar-error,
-.navbar-success {
+.navbar-success,
+.footer {
   color: white;
   display: flex;
   padding: 0 15px;
   align-items: center;
+  min-height: 35px;
 }
-.navbar-container {
+.navbar-container,
+.footer {
   background-color: black;
   justify-content: space-between;
 }
@@ -287,13 +341,20 @@ nav ul li:hover {
   flex-flow: column;
   align-items: center;
   margin: 10px;
+  border: black solid 2px;
+  border-radius: 3px;
 }
 .attendee-pic {
   width: 100px;
   height: 100px;
   border-radius: 160%;
   object-fit: cover;
-  border: black solid 2px;
+  border: white solid 2px;
+  cursor: pointer;
+  transition: all 0.25s linear;
+}
+.attendee-pic:hover {
+  border: rgb(0, 0, 0) solid 2px;
 }
 
 /* DISPLAY */
@@ -310,6 +371,7 @@ nav ul li:hover {
   padding-top: 60px;
   display: flex;
   flex-flow: row wrap;
+  min-height: 90vh;
 }
 /* small screen */
 
@@ -331,6 +393,9 @@ nav ul li:hover {
 
   .aside-1 {
     order: 1;
+    top: 70vh;
+    position: -webkit-sticky;
+    position: sticky;
   }
 
   .aside-2 {
